--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ body {
 }
 
 .A {
+    background-color: rgb(187, 163, 163);
     width: 20px;
     height: 20px;
     border: 1px solid black;
@@ -455,122 +456,3 @@ body.dark-theme .shortcut-dialogue {
     background-color: #357ae8;
 }
 
-@media (max-width: 480px) {
-
-
-    .top-nav .nav-btn {
-        font-size: 16px;
-    }
-
-    .top-nav .search-bar {
-        font-size: 12px;
-        padding: 5px;
-    }
-
-    .custom-search-bar {
-        padding: 5px;
-    }
-
-    .custom-search-bar .search-icon,
-    .custom-search-bar .voice-icon,
-    .custom-search-bar .camera-icon {
-        width: 16px;
-        height: 16px;
-        margin: 0 5px;
-    }
-
-    .custom-search-bar .search-input {
-        font-size: 14px;
-    }
-
-    .icon-bar {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .icon-bar .left-icons,
-    .icon-bar .right-icons {
-        flex-direction: row;
-        justify-content: space-around;
-        width: 100%;
-        margin-bottom: 10px;
-    }
-
-    .icon-bar .icon-item,
-    .icon-bar .right-icons span {
-        margin-right: 5px;
-    }
-
-    .icon-bar .right-icons {
-        justify-content: space-between;
-    }
-
-    .google-logo img {
-        width: 200px;
-    }
-
-    .icon-bar-below {
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .icon-item-below {
-        margin: 5px;
-    }
-
-    .customize-chrome {
-        bottom: 5px;
-        right: 5px;
-        padding: 5px;
-    }
-}
-
-@media (max-width: 360px) {
-    .custom-search-bar .search-input {
-        font-size: 12px;
-        padding: 5px;
-    }
-
-    .icon-bar {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .icon-bar .left-icons,
-    .icon-bar .right-icons {
-        flex-direction: row;
-        justify-content: space-around;
-        width: 100%;
-        margin-bottom: 5px;
-    }
-
-    .icon-bar .icon-item,
-    .icon-bar .right-icons span {
-        margin-right: 3px;
-    }
-
-    .icon-bar .right-icons {
-        justify-content: space-between;
-    }
-
-    .google-logo img {
-        width: 160px;
-    }
-
-    .icon-bar-below {
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .icon-item-below {
-        margin: 3px;
-    }
-
-    .customize-chrome {
-        bottom: 3px;
-        right: 3px;
-        padding: 3px;
-    }
-}
